# drone-swarm-vlm

./: .gitignore  README.md  SIMPLE_README.md
docs/: setup_guide.md  technical_stack.md
scripts/: run_simulation.sh  spawn_drones.py  spawn_single_drone.py
src/drone_control/: package.xml  setup.py
src/drone_control/drone_control/: hover.py  keyboard_control.py  swarm_control.py  task_allocation.py
src/perception/: package.xml  setup.py
src/perception/perception/: vlm_node.py
src/perception_local/: package.xml  setup.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: swarm_simulation.launch.py
src/simulation/models/drone/: model.sdf
src/simulation_local/: CMakeLists.txt  package.xml
src/simulation_local/launch/: keyboard_control.launch.py  manual_control.launch.py  simple_simulation.launch.py  swarm_simulation.launch.py
src/simulation_local/models/drone/: model.config  model.sdf  model.urdf
src/simulation_local/worlds/: empty.world  urban_environment.world
